--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "capacitor-firebase-auth",
-	"version": "3.0.0",
+	"version": "3.1.2-rc.3",
 	"description": "Capacitor plugin for Firebase Authentication",
 	"main": "dist/esm/index.js",
 	"types": "dist/esm/index.d.ts",
@@ -14,17 +14,18 @@
 	"author": "Bernardo Baumblatt",
 	"license": "MIT",
 	"dependencies": {
-		"@capacitor/core": "next"
+		"@capacitor/core": "latest",
+		"rxjs": "^6.6.7"
 	},
 	"devDependencies": {
-		"@capacitor/android": "next",
-		"@capacitor/ios": "next",
+		"@capacitor/android": "latest",
+		"@capacitor/ios": "latest",
 		"rimraf": "^3.0.0",
-		"typescript": "^3.9.5 || ^4.0.0"
+		"typescript": "^3.9.5 || ^4.3.5"
 	},
 	"peerDependencies": {
-		"firebase": "^8.3.0",
-		"rxjs": "~6.6.6"
+		"firebase": "^8.9.1",
+		"rxjs": "~6.6.7"
 	},
 	"files": [
 		"alternative/",
