--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@capacitor/core": "latest",
-		"rxjs": "^6.6.7"
+		"rxjs": "~6.6.7"
 	},
 	"devDependencies": {
 		"@capacitor/android": "latest",
@@ -24,7 +24,7 @@
 		"typescript": "^3.9.5 || ^4.3.5"
 	},
 	"peerDependencies": {
-		"firebase": "^8.9.1",
+		"firebase": "^9.10.0",
 		"rxjs": "~6.6.7"
 	},
 	"files": [
