--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"pack": "npm pack && mv capacitor-firebase-auth-3.*.tgz capacitor-firebase-auth-nightly.tgz",
 		"clean": "rimraf ./dist",
 		"watch": "tsc --watch",
-		"prepublishOnly": "npm run build"
+		"prepare": "npm run build"
 	},
 	"author": "Bernardo Baumblatt",
 	"license": "MIT",
