--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "capacitor-firebase-auth",
-	"version": "3.1.2-rc.6",
+	"version": "3.1.2-rc.7",
 	"description": "Capacitor plugin for Firebase Authentication",
 	"main": "dist/esm/index.js",
 	"types": "dist/esm/index.d.ts",
@@ -8,8 +8,7 @@
 		"build": "npm run clean",
 		"pack": "npm pack && mv capacitor-firebase-auth-3.*.tgz capacitor-firebase-auth-nightly.tgz",
 		"clean": "rimraf ./dist",
-		"watch": "tsc --watch",
-		"prepare": "npm run build"
+		"watch": "tsc --watch"
 	},
 	"author": "Bernardo Baumblatt",
 	"license": "MIT",
