--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
 	"name": "capacitor-firebase-auth",
-	"version": "3.1.2-rc.7",
+	"version": "3.1.2-rc.8",
 	"description": "Capacitor plugin for Firebase Authentication",
 	"main": "dist/esm/index.js",
 	"types": "dist/esm/index.d.ts",
 	"scripts": {
-		"build": "npm run clean",
+		"build": "npm run clean && tsc --project tsconfig.json",
 		"pack": "npm pack && mv capacitor-firebase-auth-3.*.tgz capacitor-firebase-auth-nightly.tgz",
 		"clean": "rimraf ./dist",
-		"watch": "tsc --watch"
+		"watch": "tsc --watch",
+		"prepublishOnly": "npm run build"
 	},
 	"author": "Bernardo Baumblatt",
 	"license": "MIT",
@@ -19,7 +20,8 @@
 	"devDependencies": {
 		"@capacitor/android": "latest",
 		"@capacitor/ios": "latest",
-		"rimraf": "^3.0.0"
+		"rimraf": "^3.0.0",
+		"typescript": "^3.9.5 || ^4.0.0"
 	},
 	"peerDependencies": {
 		"firebase": "^10.0.0",
